# tdh-tte

./: .env.example  .env.production.example  .gitignore  AGENTS.md  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/[lang]/: page.tsx
apps/ai-engine/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  test_qdrant.py
apps/ai-engine/src/: __init__.py  main.py
apps/ai-engine/src/api/: __init__.py  models.py  routes.py
apps/ai-engine/src/config/: __init__.py  settings.py
apps/ai-engine/src/core/: __init__.py  faq_filter.py  model_router.py  rag_engine.py  redis_client.py  semantic_cache.py  suggestion_generator.py
apps/ai-engine/src/ingestion/: __init__.py  contextual_enricher.py  gdrive_sync.py  metadata_extractor.py  pdf_processor.py
apps/ai-engine/src/retrieval/: __init__.py  auto_retriever.py  keyword_retriever.py
apps/ai-engine/tests/: test_hardening.py
apps/backend/: Dockerfile  package.json
apps/cms/: Dockerfile  next.config.mjs  package.json
apps/web/: Dockerfile  middleware.ts  next.config.mjs  package.json
components/: about-section.tsx  contact-section.tsx  footer.tsx  header.tsx  hero-section.tsx  preloader.tsx  products-section.tsx  projects-section.tsx  services-section.tsx
docs/: README.md
docs/ai-engine/: OPERATIONS.md  (+14 more)
i18n/: config.ts  get-dictionary.ts
lib/: data.ts
nginx/: toanthang.conf
scripts/: deploy.sh  ssl-setup.sh
styles/: globals.css
types/: index.ts
(+169 files in other folders)
